.gitignore change folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
-/Datasets/File_1.csv
-/Datasets/File_2.csv
-/Datasets/File_3.csv
-/Datasets/File_4.csv
-/Datasets/File_5.csv
-/Datasets/File_6.csv
-/Datasets/File_7.csv
-/Datasets/File_8.csv
-/Datasets/File_9.csv
-/Datasets/File_10.csv
-/Datasets/File_11.csv
-/Datasets/File_12.csv
-/Datasets/File_13.csv
-/Datasets/File_14.csv
-/Datasets/File_15.csv
-/Datasets/File_16.csv
-/Datasets/File_17.csv
-/Datasets/File_18.csv
-/Datasets/File_19.csv
-/Datasets/File_20.csv
-/Datasets/File_21.csv
-/Datasets/File_22.csv
-/Datasets/File_23.csv
-/Datasets/File_24.csv
-/Datasets/File_25.csv
+/Datasets/Flights/File_1.csv
+/Datasets/Flights/File_2.csv
+/Datasets/Flights/File_3.csv
+/Datasets/Flights/File_4.csv
+/Datasets/Flights/File_5.csv
+/Datasets/Flights/File_6.csv
+/Datasets/Flights/File_7.csv
+/Datasets/Flights/File_8.csv
+/Datasets/Flights/File_9.csv
+/Datasets/Flights/File_10.csv
+/Datasets/Flights/File_11.csv
+/Datasets/Flights/File_12.csv
+/Datasets/Flights/File_13.csv
+/Datasets/Flights/File_14.csv
+/Datasets/Flights/File_15.csv
+/Datasets/Flights/File_16.csv
+/Datasets/Flights/File_17.csv
+/Datasets/Flights/File_18.csv
+/Datasets/Flights/File_19.csv
+/Datasets/Flights/File_20.csv
+/Datasets/Flights/File_21.csv
+/Datasets/Flights/File_22.csv
+/Datasets/Flights/File_23.csv
+/Datasets/Flights/File_24.csv
+/Datasets/Flights/File_25.csv
 /combined_data.pk1
 
